--- a/Kconfig
+++ b/Kconfig
@@ -82,7 +82,7 @@ config DOCKER
         select IP_VS_RR
         select SECURITY_APPARMOR
         select BRIDGE_VLAN_FILTERING
-        select IP6_NF_TARGET_MASQUERADE
+        #select IP6_NF_TARGET_MASQUERADE
         select NETFILTER_XT_TARGET_CHECKSUM
         select FHANDLE
         select UNIX_DIAG
