add BINFMT_MISC support
添加BINFMT_MISC支持使其支持运行跨架构容器

--- a/Kconfig
+++ b/Kconfig
@@ -90,6 +90,7 @@ config DOCKER
         select NETLINK_DIAG
         select CHECKPOINT_RESTORE
         select NETFILTER_XT_MATCH_CGROUP
+        select BINFMT_MISC
 
 
 
